@@ -1,6 +1,6 @@
 % File src/library/base/man/rep.Rd
 % Part of the R package, http://www.R-project.org
-% Copyright 1995-2011 R Core Team
+% Copyright 1995-2012 R Core Team
 % Distributed under GPL 2 or later
 
 \name{rep}
@@ -10,18 +10,22 @@
 \alias{rep.POSIXct}
 \alias{rep.POSIXlt}
 \alias{rep.Date}
+\alias{rep_len}
 
 \title{Replicate Elements of Vectors and Lists}
 \description{
   \code{rep} replicates the values in \code{x}.  It is a generic
   function, and the (internal) default method is described here.
 
-  \code{rep.int} is a faster simplified version for the most common case.
+  \code{rep.int} and \code{rep_len} are faster simplified versions for
+  two common cases.
 }
 \usage{
 rep(x, \dots)
 
 rep.int(x, times)
+
+rep_len(x, length.out)
 }
 \arguments{
   \item{x}{a vector (of any mode including a list) or a pairlist or a
@@ -45,11 +49,13 @@ rep.int(x, times)
     }
   }
   \item{times}{see \code{\dots}.}
+  \item{length.out}{non-negative integer: the desired length of the
+    output vector.}
 }
 
 \details{
-  The default behaviour is as if the call was \code{rep(x, times=1,
-    length.out=NA, each=1)}.  Normally just one of the additional
+  The default behaviour is as if the call was \code{rep(x, times = 1,
+    length.out = NA, each = 1)}.  Normally just one of the additional
   arguments is specified, but if \code{each} is specified with either
   of the other two, its replication is performed first, and then that
   implied by \code{times} or \code{length.out}.
@@ -78,7 +84,8 @@ rep.int(x, times)
   An object of the same type as \code{x} (except that \code{rep} will
   coerce pairlists to vector lists).
 
-  \code{rep.int} returns no attributes.
+  \code{rep.int} and \code{rep_len} return no attributes (except the
+  class if returning a factor).
 
   The default method of \code{rep} gives the result names (which will
   almost always contain duplicates) if \code{x} had names, but retains
@@ -86,7 +93,8 @@ rep.int(x, times)
 }
 \note{
   Function \code{rep.int} is a simple case handled by internal code, and
-  provided as a separate function purely for S compatibility.
+  provided as a separate function partly for S compatibility and partly
+  for speed (especially when names can be dropped).
 
   Function \code{rep} is a primitive, but (partial) matching of argument
   names is performed as for normal functions.  You can no longer pass a
